# directx-test

./: .gitignore  CMakeLists.txt
code/: main.cpp
code/math/: CMakeLists.txt
code/math/asm_masm_impl/: mat2x2_masm_impl.asm  mat4x4_masm_impl.asm  vec_masm_impl.asm
code/math/asm_types/: xmmword.hpp
code/math/core/: core-math.cpp  core-math.hpp  transform.cpp  transform.hpp
code/math/math.test/: CMakeLists.txt  goo-math.mat2f.test.cpp  goo-math.mat3f.test.cpp  goo-math.mat4f.test.cpp  goo-math.transform.test.cpp  goo-math.vec.asm.test.cpp  goo-math.vec2f.test.cpp  goo-math.vec3f.test.cpp  goo-math.vec4f.test.cpp
code/math/matrix/: mat2f-extern.hpp  mat2f.cpp  mat2f.hpp  mat3f.cpp  mat3f.hpp  mat4f-extern.hpp  mat4f.cpp  mat4f.hpp
code/math/vector/: vec-comp.cpp  vec-comp.hpp  vec-extern-func.hpp  vec2f.cpp  vec2f.hpp  vec3f.cpp  vec3f.hpp  vec4f.cpp  vec4f.hpp
code/window/: CMakeLists.txt  iwindow.hpp  windows_window.cpp  windows_window.hpp
